--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "workbox-streams": "^5.1.3"
   },
   "scripts": {
-    "start": "yarn buildThemes && craco start",
-    "build": "yarn buildThemes && craco build",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider && yarn buildThemes && craco start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider && yarn buildThemes && craco build",
     "test": "craco test",
     "eject": "craco eject",
     "lint": "eslint \"*/**/*.{js,ts,tsx}\" --fix",
