--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
     "*/**/*.{js,ts,tsx}": "yarn lint"
   },
   "engines": {
-    "node": "16.x"
+    "node": "16.10.0"
   },
   "resolutions": {
     "@types/react": "^17.0.43",
