--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "echarts": "^5.1.2",
     "echarts-for-react": "^3.0.1",
     "elt-react-credit-cards": "^0.0.1",
+    "express": "^4.18.2",
     "google-map-react": "^2.1.10",
     "i18next": "^20.4.0",
     "leaflet": "^1.7.1",
