--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "postinstall": "patch-package",
     "buildThemes": "lessc --js --clean-css=\"--s1 --advanced\" src/styles/themes/main.less public/themes/main.css"
   },
+  "nodeFlags": ["--openssl-legacy-provider"],
   "browserslist": [
     ">0.2%",
     "not dead",
