--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
     "postinstall": "patch-package",
     "buildThemes": "lessc --js --clean-css=\"--s1 --advanced\" src/styles/themes/main.less public/themes/main.css"
   },
-  "nodeFlags": ["--openssl-legacy-provider"],
+  "nodeFlags": [
+    "--openssl-legacy-provider"
+  ],
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -127,7 +129,7 @@
     "*/**/*.{js,ts,tsx}": "yarn lint"
   },
   "engines": {
-    "node": "16.10.0"
+    "node": "18.12.1"
   },
   "resolutions": {
     "@types/react": "^17.0.43",
