--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "workbox-streams": "^5.1.3"
   },
   "scripts": {
-    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && yarn buildThemes && craco start",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && yarn buildThemes && craco start",
     "build": "yarn buildThemes && craco build",
     "test": "craco test",
     "eject": "craco eject",
@@ -82,9 +82,6 @@
     "postinstall": "patch-package",
     "buildThemes": "lessc --js --clean-css=\"--s1 --advanced\" src/styles/themes/main.less public/themes/main.css"
   },
-  "nodeFlags": [
-    "--openssl-legacy-provider"
-  ],
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -129,7 +126,7 @@
     "*/**/*.{js,ts,tsx}": "yarn lint"
   },
   "engines": {
-    "node": "16.10.0"
+    "node": "18.x"
   },
   "resolutions": {
     "@types/react": "^17.0.43",
