--- a/package.json
+++ b/package.json
@@ -58,8 +58,6 @@
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
-    "webpack": "latest",
-    "webpack-cli": "latest",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
     "workbox-cacheable-response": "^5.1.3",
@@ -130,7 +128,8 @@
     "*/**/*.{js,ts,tsx}": "yarn lint"
   },
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "yarn": "3.x"
   },
   "resolutions": {
     "@types/react": "^17.0.43",
