--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,12 @@
 # dependencies
 /node_modules
 .pnp.*
-# .yarn/*
-# !.yarn/patches
-# !.yarn/plugins
-# !.yarn/releases
-# !.yarn/sdks
-# !.yarn/versions
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # testing
 /coverage
