--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
     "workbox-streams": "^5.1.3"
   },
   "scripts": {
-    "start": "yarn build && craco start",
-    "heroku-postbuild": "yarn buildThemes && craco build",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && yarn buildThemes && craco start",
     "dev": "export NODE_OPTIONS=--openssl-legacy-provider && yarn buildThemes && craco start",
     "build": "yarn buildThemes && craco build",
     "test": "craco test",
@@ -126,10 +125,6 @@
   },
   "lint-staged": {
     "*/**/*.{js,ts,tsx}": "yarn lint"
-  },
-  "engines": {
-    "node": "18.17.0",
-    "yarn": "3.x"
   },
   "resolutions": {
     "@types/react": "^17.0.43",
