--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "elt-react-credit-cards": "^0.0.1",
     "google-map-react": "^2.1.10",
     "i18next": "^20.4.0",
+    "is-empty": "^1.2.0",
     "leaflet": "^1.7.1",
     "patch-package": "^6.4.7",
     "pigeon-maps": "^0.19.7",
@@ -90,6 +91,7 @@
   "devDependencies": {
     "@types/country-list": "^2.1.0",
     "@types/google-map-react": "^2.1.3",
+    "@types/is-empty": "^1.2.1",
     "@types/leaflet": "^1.7.9",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
