--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,5 @@ REACT_APP_ASSETS_BUCKET=https://lightence-assets.s3.amazonaws.com
 # more info https://create-react-app.dev/docs/advanced-configuration
 ESLINT_NO_DEV_ERRORS=true
 TSC_COMPILE_ON_ERROR=true
-# REACT_APP_API_URL = https://sickbridge-js02.onrender.com
+# REACT_APP_API_URL = https://sickbridge.herokuapp.com
 REACT_APP_API_URL = http://localhost:4000
