--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
-    "@craco/craco": "^6.1.2",
     "@lit-labs/react": "^1.0.2",
     "@reduxjs/toolkit": "^1.7.1",
     "antd": "^4.22.4",
@@ -73,8 +72,8 @@
     "workbox-streams": "^5.1.3"
   },
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && yarn buildThemes && craco start",
-    "dev": "export NODE_OPTIONS=--openssl-legacy-provider && yarn buildThemes && craco start",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && yarn buildThemes && craco start",
+    "dev": "set NODE_OPTIONS=--openssl-legacy-provider && yarn buildThemes && craco start",
     "build": "yarn buildThemes && craco build",
     "test": "craco test",
     "eject": "craco eject",
@@ -91,6 +90,7 @@
     "not IE 11"
   ],
   "devDependencies": {
+    "@craco/craco": "^6.1.2",
     "@types/country-list": "^2.1.0",
     "@types/google-map-react": "^2.1.3",
     "@types/is-empty": "^1.2.1",
@@ -132,7 +132,7 @@
     "@types/react": "^17.0.43",
     "react-error-overlay": "6.0.9"
   },
-  "packageManager": "yarn@3.1.1",
+  "packageManager": "yarn@3.6.1",
   "keywords": [
     "lightence",
     "admin",
