--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_BASE_URL=http://localhost:4000/api
 REACT_APP_ASSETS_BUCKET=https://lightence-assets.s3.amazonaws.com
-# REACT_APP_API_URL = https://sickbridge.herokuapp.com
-REACT_APP_API_URL = http://localhost:4000
+REACT_APP_API_URL = https://sickbridge.herokuapp.com
+# REACT_APP_API_URL = http://localhost:4000
 
 # more info https://create-react-app.dev/docs/advanced-configuration
 ESLINT_NO_DEV_ERRORS=true
